--- a/app/LandmarkCIty/app/src/main/res/layout/content_forgot_password.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/content_forgot_password.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
     <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:id="@+id/parentLayout"
+        android:background="@drawable/background"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -76,7 +74,9 @@
                 android:layout_marginTop="@dimen/dp12"
                 android:text="@string/loginText"
                 android:textColor="@color/text_dark"
-                android:textSize="@dimen/font_14"></in.squareiapp.landmarkcity.custom_views.AppTextView>
+                android:textSize="@dimen/font_14">
+
+            </in.squareiapp.landmarkcity.custom_views.AppTextView>
 
             <Button
                 android:id="@+id/btnResetPassword"
@@ -91,4 +91,3 @@
 
         </RelativeLayout>
     </ScrollView>
-</RelativeLayout>
