--- a/app/LandmarkCIty/app/src/main/res/layout/activity_greetings.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/activity_greetings.xml
@@ -5,10 +5,9 @@
     android:id="@+id/baseCoordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context="in.squareiapp.landmarkcity.activities.featuresactivities.GreetingsActivity">
+    tools:context="in.squareiapp.landmarkcity.activities.featuresactivities.StoreActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -25,5 +24,17 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+    </RelativeLayout>
 
 </LinearLayout>
