--- a/app/LandmarkCIty/app/src/main/res/layout/activity_stores_list.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/activity_stores_list.xml
@@ -32,7 +32,9 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
     </RelativeLayout>
 
 </LinearLayout>
