--- a/app/LandmarkCIty/app/src/main/res/layout/content_login_activity.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/content_login_activity.xml
@@ -1,144 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/mainScrollLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    android:background="@drawable/background">
 
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/dp40"
+        android:paddingRight="@dimen/dp40">
+
+        <ImageView
+            android:id="@+id/iv"
+            android:layout_width="@dimen/logo_width"
+            android:layout_height="@dimen/logo_height"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="55dp"
+            android:padding="@dimen/dp8"
+            android:scaleType="fitXY"
+            android:src="@drawable/land_logo" />
 
         <RelativeLayout
+            android:id="@+id/relativeLogin"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingLeft="@dimen/dp40"
-            android:paddingRight="@dimen/dp40">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iv"
+            android:layout_marginTop="@dimen/dp28"
+            android:background="@drawable/edit_text_background"
+            android:padding="@dimen/dp2">
 
             <ImageView
-                android:id="@+id/iv"
-                android:layout_width="@dimen/logo_width"
-                android:layout_height="@dimen/logo_height"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="55dp"
-                android:padding="@dimen/dp8"
-                android:scaleType="fitXY"
-                android:src="@drawable/land_logo" />
+                android:id="@+id/ivUser"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentLeft="true"
+                android:padding="@dimen/dp4"
+                android:src="@drawable/mobile" />
 
-            <RelativeLayout
-                android:id="@+id/relativeLogin"
+            <View
+                android:id="@+id/view1"
+                android:layout_width="1dp"
+                android:layout_height="25dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/dp8"
+                android:layout_marginRight="@dimen/dp8"
+                android:layout_toRightOf="@+id/ivUser"
+                android:background="@color/border_color" />
+
+            <EditText
+                android:id="@+id/editUserName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/iv"
-                android:layout_marginTop="@dimen/dp28"
-                android:background="@drawable/edit_text_background"
-                android:padding="@dimen/dp2">
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/view1"
+                android:background="@android:color/transparent"
+                android:hint="@string/hint_user_name"
+                android:inputType="text"
+                android:singleLine="true"
+                android:textColorHint="@color/text_hint"
+                android:textSize="@dimen/font_14" />
+        </RelativeLayout>
 
-                <ImageView
-                    android:id="@+id/ivUser"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentLeft="true"
-                    android:padding="@dimen/dp4"
-                    android:src="@drawable/mobile" />
+        <RelativeLayout
+            android:id="@+id/relativePassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/relativeLogin"
+            android:layout_marginTop="@dimen/dp20"
+            android:background="@drawable/edit_text_background"
+            android:padding="@dimen/dp2">
 
-                <View
-                    android:id="@+id/view1"
-                    android:layout_width="1dp"
-                    android:layout_height="25dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/dp8"
-                    android:layout_marginRight="@dimen/dp8"
-                    android:layout_toRightOf="@+id/ivUser"
-                    android:background="@color/border_color" />
+            <ImageView
+                android:id="@+id/ivPass"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentLeft="true"
+                android:padding="@dimen/dp4"
+                android:src="@drawable/password" />
 
-                <EditText
-                    android:id="@+id/editUserName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/view1"
-                    android:background="@android:color/transparent"
-                    android:hint="@string/hint_user_name"
-                    android:inputType="text"
-                    android:singleLine="true"
-                    android:textColorHint="@color/text_hint"
-                    android:textSize="@dimen/font_14"
-                    />
-            </RelativeLayout>
+            <View
+                android:id="@+id/view2"
+                android:layout_width="1dp"
+                android:layout_height="25dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/dp8"
+                android:layout_marginRight="@dimen/dp8"
+                android:layout_toRightOf="@+id/ivPass"
+                android:background="@color/border_color" />
 
-            <RelativeLayout
-                android:id="@+id/relativePassword"
+            <EditText
+                android:id="@+id/editPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/relativeLogin"
-                android:layout_marginTop="@dimen/dp20"
-                android:background="@drawable/edit_text_background"
-                android:padding="@dimen/dp2">
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/view2"
+                android:background="@android:color/transparent"
+                android:hint="@string/hintPassword"
+                android:inputType="textPassword"
+                android:singleLine="true"
+                android:textColorHint="@color/text_hint"
+                android:textSize="@dimen/font_14" />
+        </RelativeLayout>
 
-                <ImageView
-                    android:id="@+id/ivPass"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentLeft="true"
-                    android:padding="@dimen/dp4"
-                    android:src="@drawable/password" />
 
-                <View
-                    android:id="@+id/view2"
-                    android:layout_width="1dp"
-                    android:layout_height="25dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/dp8"
-                    android:layout_marginRight="@dimen/dp8"
-                    android:layout_toRightOf="@+id/ivPass"
-                    android:background="@color/border_color" />
+        <in.squareiapp.landmarkcity.custom_views.AppTextView
+            android:id="@+id/textForgotPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/relativePassword"
+            android:layout_marginTop="@dimen/dp12"
+            android:text="@string/forgotPassword"
+            android:textColor="@color/text_dark"
+            android:textSize="@dimen/font_14"></in.squareiapp.landmarkcity.custom_views.AppTextView>
 
-                <EditText
-                    android:id="@+id/editPassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/view2"
-                    android:background="@android:color/transparent"
-                    android:hint="@string/hintPassword"
-                    android:inputType="textPassword"
-                    android:singleLine="true"
-                    android:textColorHint="@color/text_hint"
-                    android:textSize="@dimen/font_14" />
-            </RelativeLayout>
+        <Button
+            android:id="@+id/btnLogin"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp36"
+            android:layout_below="@+id/textForgotPassword"
+            android:layout_marginTop="@dimen/dp16"
+            android:background="@color/btn_background"
+            android:text="Login"
+            android:textColor="@color/white" />
+
+        <LinearLayout
+            android:id="@+id/textRegister"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/btnLogin"
+            android:layout_marginTop="@dimen/dp12"
+            android:gravity="center"
+            android:orientation="horizontal">
 
 
             <in.squareiapp.landmarkcity.custom_views.AppTextView
-                android:id="@+id/textForgotPassword"
+                android:id="@+id/textRegister2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/relativePassword"
-                android:layout_marginTop="@dimen/dp12"
-                android:text="@string/forgotPassword"
-                android:textColor="@color/text_dark"
-                android:textSize="@dimen/font_14"></in.squareiapp.landmarkcity.custom_views.AppTextView>
-
-            <Button
-                android:id="@+id/btnLogin"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp36"
-                android:layout_below="@+id/textForgotPassword"
-                android:layout_marginTop="@dimen/dp16"
-                android:background="@color/btn_background"
-                android:text="Login"
-                android:textColor="@color/white" />
-
-            <in.squareiapp.landmarkcity.custom_views.AppTextView
-                android:id="@+id/textRegister"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/btnLogin"
-                android:layout_marginTop="@dimen/dp12"
                 android:text="@string/registerText"
                 android:textColor="@color/text_dark"
                 android:textSize="@dimen/font_14">
@@ -146,51 +148,63 @@
             </in.squareiapp.landmarkcity.custom_views.AppTextView>
 
             <in.squareiapp.landmarkcity.custom_views.AppTextView
-                android:id="@+id/textor"
+                android:id="@+id/textRegister1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textRegister"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/dp12"
-                android:text="or, sign in with"
-                android:textColor="@color/text_light"
-                android:textSize="@dimen/font_14">
+                android:text="@string/register_now_text"
+                android:textColor="@color/text_dark"
+                android:textSize="@dimen/font_14"
+                android:textStyle="bold">
 
             </in.squareiapp.landmarkcity.custom_views.AppTextView>
+        </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textor"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="@dimen/dp12"
-                android:layout_marginTop="@dimen/dp12"
-                android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/ivFacebook"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentLeft="true"
-                    android:padding="@dimen/dp8"
-                    android:src="@drawable/facebook" />
+        <in.squareiapp.landmarkcity.custom_views.AppTextView
+            android:id="@+id/textor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textRegister"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/dp12"
+            android:text="or, sign in with"
+            android:textColor="@color/text_light"
+            android:textSize="@dimen/font_14">
 
-                <ImageView
-                    android:id="@+id/ivGoogle"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentLeft="true"
-                    android:padding="@dimen/dp8"
-                    android:src="@drawable/googleplus" />
+        </in.squareiapp.landmarkcity.custom_views.AppTextView>
 
-                <ImageView
-                    android:id="@+id/ivTwitter"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentLeft="true"
-                    android:padding="@dimen/dp8"
-                    android:src="@drawable/twitter" />
-            </LinearLayout>
-        </RelativeLayout>
-    </ScrollView>
-</RelativeLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textor"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="@dimen/dp12"
+            android:layout_marginTop="@dimen/dp12"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/ivFacebook"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentLeft="true"
+                android:padding="@dimen/dp8"
+                android:src="@drawable/facebook" />
+
+            <ImageView
+                android:id="@+id/ivGoogle"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentLeft="true"
+                android:padding="@dimen/dp8"
+                android:src="@drawable/googleplus" />
+
+            <ImageView
+                android:id="@+id/ivTwitter"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentLeft="true"
+                android:padding="@dimen/dp8"
+                android:src="@drawable/twitter" />
+        </LinearLayout>
+    </RelativeLayout>
+</ScrollView>
