--- a/app/LandmarkCIty/app/src/main/res/layout/activity_friends.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/activity_friends.xml
@@ -63,6 +63,7 @@
             android:orientation="vertical">
 
             <in.squareiapp.landmarkcity.custom_views.AppTextView
+                android:id="@+id/textViewSuggestions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#ecebeb"
@@ -77,7 +78,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/dp8"
-                android:paddingRight="@dimen/dp8"></android.support.v7.widget.RecyclerView>
+                android:paddingRight="@dimen/dp8">
+
+            </android.support.v7.widget.RecyclerView>
         </LinearLayout>
 
 
