--- a/app/LandmarkCIty/app/src/main/res/layout/test.xml
+++ b/app/LandmarkCIty/app/src/main/res/layout/test.xml
@@ -65,6 +65,7 @@
                 android:src="@drawable/calll" />
 
             <TextView
+                android:id="@+id/sosNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
