--- a/app/LandmarkCIty/app/src/main/res/menu/menu_home.xml
+++ b/app/LandmarkCIty/app/src/main/res/menu/menu_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/nav_profile"
@@ -36,7 +37,13 @@
     <item
         android:id="@+id/nav_share_location"
         android:icon="@drawable/share_location_48"
+        app:actionLayout="@layout/show_protected_switch"
         android:title="Share Location" />
+
+    <item
+        android:id="@+id/nav_share_location_parent"
+        android:icon="@drawable/share_location_48"
+        android:title="Tracker" />
     <item
         android:id="@+id/nav_setting"
         android:icon="@drawable/settings_48"
